Archive2/4a/84ea8695522358/output
A=1
OK
A=0
In file included from main.cpp:1:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/iostream:39:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:38:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ios:40:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/char_traits.h:39:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:373:4: error: static_assert failed "type is not assignable"
          static_assert( is_copy_assignable<_Tp>::value,
          ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:396:36: note: in instantiation of function template specialization 'std::__copy_move<true, true, std::random_access_iterator_tag>::__copy_m<element>' requested here
                              _Category>::__copy_m(__first, __last, __result);
                                          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:432:23: note: in instantiation of function template specialization 'std::__copy_move_a<true, element *, element *>' requested here
      return _OI(std::__copy_move_a<_IsMove>(std::__niter_base(__first),
                      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:464:20: note: in instantiation of function template specialization 'std::__copy_move_a2<true, element *, element *>' requested here
      return (std::__copy_move_a2<__is_move_iterator<_II>::__value>
                   ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_uninitialized.h:93:23: note: in instantiation of function template specialization 'std::copy<std::move_iterator<element *>, element *>' requested here
        { return std::copy(__first, __last, __result); }
                      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_uninitialized.h:125:2: note: in instantiation of function template specialization 'std::__uninitialized_copy<true>::__uninit_copy<std::move_iterator<element *>, element *>' requested here
        __uninit_copy(__first, __last, __result);
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_uninitialized.h:278:19: note: (skipping 6 contexts in backtrace; use -ftemplate-backtrace-limit=0 to see all)
    { return std::uninitialized_copy(__first, __last, __result); }
                  ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:355:18: note: in instantiation of member function 'std::back_insert_iterator<std::vector<element, std::allocator<element> > >::operator=' requested here
              *__result = std::move(*__first);
                        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:396:36: note: in instantiation of function template specialization 'std::__copy_move<true, false, std::random_access_iterator_tag>::__copy_m<element *, std::back_insert_iterator<std::vector<element, std::allocator<element> > > >' requested here
                              _Category>::__copy_m(__first, __last, __result);
                                          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:432:23: note: in instantiation of function template specialization 'std::__copy_move_a<true, element *, std::back_insert_iterator<std::vector<element, std::allocator<element> > > >' requested here
      return _OI(std::__copy_move_a<_IsMove>(std::__niter_base(__first),
                      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:497:19: note: in instantiation of function template specialization 'std::__copy_move_a2<true, __gnu_cxx::__normal_iterator<element *, std::vector<element, std::allocator<element> > >, std::back_insert_iterator<std::vector<element, std::allocator<element> > > >' requested here
      return std::__copy_move_a2<true>(std::__miter_base(__first),
                  ^
main.cpp:21:10: note: in instantiation of function template specialization 'std::move<__gnu_cxx::__normal_iterator<element *, std::vector<element, std::allocator<element> > >, std::back_insert_iterator<std::vector<element, std::allocator<element> > > >' requested here
    std::move(std::begin(source), std::end(source), std::back_inserter(destination)); // will it work?
         ^
1 error generated.
